Add support of the java 11.